--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>This is the fifth time the code has been changed</h2>
     <h2>This is the sixth time the code has been changed</h2>
     <h2>Test Deployment Alert</h2>
+    <h2>Demo BeOne</h2>
 </body>
 </html>
