--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h2>Test POD Alerting</h2>
     <h2>Test POD Alerting 2</h2>
     <h2>Test POD Alerting 3</h2>
+    <h2>Test after coupon injected</h2>
 </body>
 </html>
